# money-printer

./: .gitignore  app.py  main.py  pyproject.toml
.claude/: settings.json
config/: portfolio.yaml  settings.yaml
data/: backtest_result.csv  blend_c2c_FRESH_v2_extreme.lgb  blend_c2c_FRESH_v2_primary.lgb  blend_c2c_cutoff20250831_extreme.lgb  blend_c2c_cutoff20250831_primary.lgb  blend_c2c_v2_cutoff20260325_extreme.lgb  blend_c2c_v2_cutoff20260325_primary.lgb  blend_extreme.lgb  blend_primary.lgb  c2c_fresh_ic_decay.json  feature_importance_audit_postfix.txt  ic_curated.json  intraday_blend_control_extreme.lgb  intraday_blend_control_primary.lgb  intraday_blend_extreme.lgb  intraday_blend_extreme_eodproxy.lgb.archive  intraday_blend_primary.lgb  intraday_blend_primary_eodproxy.lgb.archive  model.lgb  model_60d.lgb  walk_forward_c2c_as_oos_64.json  walk_forward_c2c_b1_fix.json  walk_forward_c2c_eod.json  walk_forward_c2c_protect_oos.json  walk_forward_c2c_v2_cutoff.json  walk_forward_c2c_v2_holdout.json
docs/: TODO.md  cron_setup.md  decision_log.md  p11_4_spike.md
mp/: __init__.py  config.py
scripts/: account_report.py  account_report.sh  arm_b_stop_monitor.py  auto_retrain.py  backfill_constituents.py  backfill_valuation.py  batch_ic_analysis.py  blend_regime_sweep.py  blend_weight_sweep.py  c2c_fresh_ic_decay.py  cross_sectional_ic.py  daily_collect.sh  daily_report.py  daily_report.sh  db_sanity_check.py  dryrun_phase3_picks.py  ecs_auto_execute.ps1  ecs_auto_retrain.ps1  ecs_daily_report.ps1  ecs_intraday_execute.ps1  ecs_qfq_refresh.ps1  execute_orders.py  (+38 more)
(+180 files in other folders)
